[tool.poetry]
name = "logbucket"
version = "0.1.0"
description = ""
authors = ["João Victor Inocêncio Macedo de Aguiar"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
